--- a/search_box.css
+++ b/search_box.css
@@ -1,8 +1,6 @@
 body {
   font-family: Arial, sans-serif;
   margin: 10px;
-  display: flex;
-  flex-direction: column;
 }
 body.light-mode {
   background-color: #fff;
@@ -12,16 +10,8 @@ body.dark-mode {
   background-color: #333;
   color: #fff;
 }
-#header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#searchRow {
-  margin-top: 10px;
-}
 #searchBox {
-  width: 100%;
+  width: 300px;
   height: 25px;
   padding: 5px;
   border: none;
